--- a/Baxici.WebMVC/appsettings.Development.json
+++ b/Baxici.WebMVC/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Server=127.0.0.1,1433;Database=Baxici;User Id=SA;Password=Password1*;Trusted_Connection=False;Encrypt=False"
   }
 }
