--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,3 +4,14 @@
     build:
       context: .
       dockerfile: Baxici.WebMVC/Dockerfile
+    ports:
+      - "80:8080"
+  baxici.database:
+    container_name: baxici-database
+    image: mcr.microsoft.com/mssql/server:2022-latest
+    restart: always
+    environment:
+      - ACCEPT_EULA=Y
+      - MSSQL_SA_PASSWORD=Password1*
+    ports:
+      - "1433:1433"
