auth service created

--- a/Loan.Application/Loan.Application.csproj
+++ b/Loan.Application/Loan.Application.csproj
@@ -3,11 +3,17 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Loan.DataAccess\Loan.DataAccess.csproj" />
+    <ProjectReference Include="..\Loan.Shared\Loan.Shared.csproj" />
   </ItemGroup>
 
 </Project>
