--- a/Loan.WebMVC/appsettings.Development.json
+++ b/Loan.WebMVC/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1,1433;Database=Baxici;User Id=SA;Password=Password1*;Trusted_Connection=False;Encrypt=False"
+    "DefaultConnection": "Server=127.0.0.1,1433;Database=Loan;User Id=SA;Password=Password1*;Trusted_Connection=False;Encrypt=False"
   }
 }
