entities being not tracking

--- a/Loan.WebMVC/Loan.WebMVC.csproj
+++ b/Loan.WebMVC/Loan.WebMVC.csproj
@@ -33,7 +33,7 @@
 
     <ItemGroup>
       <Folder Include="Areas\Admin\Pages\" />
-      <Folder Include="Pages\" />
+      <Folder Include="Pages\Shared\Components\" />
       <Folder Include="wwwroot\admin\" />
       <Folder Include="wwwroot\css\" />
     </ItemGroup>
